--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.796.0",
+    "@bull-board/api": "^6.9.2",
+    "@bull-board/express": "^6.9.2",
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "aws-sdk": "^2.1692.0",
@@ -21,6 +23,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "i": "^0.3.7",
+    "ioredis": "^5.6.1",
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.2",
     "redis": "^4.7.0",
